--- a/qml.qrc
+++ b/qml.qrc
@@ -5,5 +5,8 @@
         <file>MenuPanel.qml</file>
         <file>ControlPanel.qml</file>
         <file>Tile.qml</file>
+        <file>Frame.qml</file>
+        <file>Button.qml</file>
+        <file>Switch.qml</file>
     </qresource>
 </RCC>
