--- a/Images.qrc
+++ b/Images.qrc
@@ -31,8 +31,8 @@
         <file>Images/close.png</file>
         <file>Images/minimize.png</file>
         <file>Images/tile_background.png</file>
-        <file>Images/quit.png</file>
         <file>Images/backgrand.jpg</file>
         <file>Images/0.png</file>
+        <file>Images/s.jpg</file>
     </qresource>
 </RCC>
